--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generate a set of sample signals."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 155,
    "metadata": {},
@@ -41,43 +48,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 156,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5000, 5)"
-      ]
-     },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.shape"
+    "Note that PandasPlot expects a DataFrame where each series is a column, whereas NumpyPlot expects an array where each series is a row."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(5, 5000)"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame:  (5000, 5)\n",
+      "Numpy array:  (5, 5000)\n"
+     ]
     }
    ],
    "source": [
-    "nump.shape"
+    "print 'DataFrame: ', df.shape\n",
+    "print 'Numpy array: ', nump.shape"
    ]
   },
   {
@@ -141,9 +134,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reduce number of channels displayed at once"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 160,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -168,6 +170,13 @@
    ],
    "source": [
     "PandasPlot(df, num_display_chans=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reduce number of samples displayed at once"
    ]
   },
   {
@@ -198,6 +207,13 @@
    ],
    "source": [
     "PandasPlot(df, num_display_samps=2000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Highlight segments of the signals"
    ]
   },
   {
