--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# multiplot tutorial\n",
+    "\n",
+    "Although the forthcoming inline plots are static, running this code in a Python shell will produce interactive matplotlib windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 154,
    "metadata": {
@@ -130,7 +139,7 @@
     }
    ],
    "source": [
-    "NumpyPlot(nump)"
+    "NumpyPlot(nump, labels=labels) # if labels aren't supplied, 'Ch x' labels are auto-generated"
    ]
   },
   {
